--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -2,9 +2,9 @@
 * @Author: Administrator
 * @Date:   2017-10-14 14:49:40
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-10-15 18:44:14
+* @Last Modified time: 2017-10-19 20:09:21
 */
 body{
-	background: url(../../image/1.jpg);
+	/*background: url(../../image/1.jpg);*/
 	font-size:50px;
 }
