--- a/src/page/result/index.css
+++ b/src/page/result/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-10-23 19:59:35
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-10-23 21:02:53
+* @Last Modified time: 2017-10-23 22:03:30
 */
 .page-wrap
 {
@@ -27,4 +27,5 @@
 .result-con
 {
 	display: none;
+	margin:0 auto;
 }
