--- a/src/view/result.html
+++ b/src/view/result.html
@@ -15,12 +15,24 @@
 		<h1 class="result-title">恭喜你，注册成功！</h1>
 		<div class="result-content">
 			<a class="link" href="./index.html">回到首页</a>
+			<a class="link" href="./user-login.html">立即登录</a>
+
 		</div>
 	</div>
+	<div class="result-con pass-reset-success">
+		<h1 class="result-title">恭喜你，操作成功！</h1>
+		<div class="result-content">
+			<a class="link" href="./index.html">回到首页</a>
+			<a class="link" href="./user-login.html">立即登录</a>
+
+		</div>
+		</div>
 	<div class="result-con default-success">
 		<h1 class="result-title">恭喜你，操作成功！</h1>
 		<div class="result-content">
 			<a class="link" href="./index.html">回到首页</a>
+			<a class="link" href="./user-login.html">立即登录</a>
+
 		</div>
 	</div>
 </div>
