--- a/src/view/layout/header.html
+++ b/src/view/layout/header.html
@@ -1,6 +1,6 @@
 <div  class="header">
 	<div class="w">
-		<div class="logo">MMALL</div>
+		<a class="logo" href="./index.html">MMALL</a>
 		<div class="search-con">
 			<input id="search-input" class="search-input" placeholder="请输入商品名称" />
 			<a class="search-btn" id="search-btn" value="搜索">搜索</a>
