--- a/src/view/user-center.html
+++ b/src/view/user-center.html
@@ -4,17 +4,32 @@
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
 <%=require('html-loader!./layout/head-common.html')%>
-<title>happymmall电商平台</title>
+<title><%=htmlWebpackPlugin.options.title%>--happymmall电商平台</title>
 </head>
 <body>
 	<%=require('html-loader!./layout/nav.html')%>
 
 <%=require('html-loader!./layout/header.html')%>
 
+<div class="crumb">
+	<div class="w">
+		<div class="crumb-con" >
+			<a href="./index.html" class="link">MMALL</a>
+			<span>&gt;</span>
+			<a href="./user-center-update.html" class="link"><%=htmlWebpackPlugin.options.title%></a>
+		</div>
+	</div>
+</div>
 <div class="page-wrap w">
 		<%=require('html-loader!./layout/nav-side.html')%>
 	<div class="content with-nav">
-		
+			<div class="panel">
+				<div class="panel-title">个人中心</div>
+				<div class="panel-body">
+					加载中----------------
+						
+				</div>
+			</div>
 	</div>
 </div>
 <%=require('html-loader!./layout/footer.html')%>
