--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-10-14 14:49:40
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-10-31 23:42:22
+* @Last Modified time: 2017-11-02 22:50:03
 */
 body{
 	/*background: url(../../image/1.jpg);*/
@@ -15,7 +15,7 @@ body{
 	width: 250px;
 	margin-right: 0px;
 	float: left;
-	height: 350px;
+	height: 340px;
 	padding-bottom: 
 }
 .keywords-item
@@ -40,11 +40,85 @@ body{
 .loadding
 {
 	float: left;
-	border:1px solid red;
 	text-align: center;
-	height: 350px;
+	height: 348px;
 	line-height: 350px;
-	width:700px;
+	width:800px;
 	
 	margin-bottom: 30px;
+}
+.commodity 
+{
+	clear: both;
+}
+.common-type:nth-child(1) h2
+{
+	color:#a93931;
+	padding-left:20px;
+	border-bottom:solid #a93931 1px;
+}
+.common-type:nth-child(2) h2
+{
+	color:#3b838c;
+	padding-left:20px;
+	border-bottom:solid #3b838c 1px;
+}.common-type:nth-child(3) h2
+{
+	color:#888bad;
+	padding-left:20px;
+	border-bottom:solid #a93931 1px;
+}
+.common-type:nth-child(4) h2
+{
+	color:#3b838c;
+	padding-left:20px;
+	border-bottom:solid #3b838c 1px;
+}
+.common-type:nth-child(5) h2
+{
+	color:#a93931;
+	padding-left:20px;
+	border-bottom:solid #a93931 1px;
+}
+.common-type a
+{
+	background: #fff;
+
+}
+
+.common-type li
+{
+	float: left;
+	height: 250px;
+	width:200px;
+	position: relative;
+	margin:5px;
+
+}
+.common-type li:hover
+{
+	box-shadow: 1px 1px 7px #666;
+}
+.common-type span
+{
+	position: absolute;
+	top:5px;
+	left:10px;
+	font-size:20px;
+	color:#666;
+}
+
+.common-type img
+{
+	position: absolute;
+	top:25px;
+	left:-5px;
+	width: 200px;
+	height: 200px;
+
+}
+.common-type
+{
+	clear: both;
+	
 }
