--- a/src/view/index.html
+++ b/src/view/index.html
@@ -51,7 +51,173 @@
 			</li>
 			
 		</ul>
-		<div class="loadding">加载中-----</div>
+		<div class="loadding" id="ad">加载中-----</div>
+		<div class="commodity">
+			<div class="common-type">
+				<h2>商品列表</h2>
+				<ul>
+					<li>
+						<a href="./list.html?categoryId=100002">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor1-1.jpg"/>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor1-2.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor1-3.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor1-4.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor1-5.jpg"/>
+						</a>
+					</li>
+				</ul>
+				
+			</div>
+			<div class="common-type">
+				<h2>商品列表</h2>
+				<ul>
+					<li>
+						<a href="./list.html?categoryId=100002">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor2-1.jpg"/>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor2-2.jpg"/>
+						</a>
+					</li><li>
+						<a href="./list.html?categoryId=100002">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor2-3.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor2-4.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor2-5.jpg"/>
+						</a>
+					</li>
+				</ul>
+				
+			</div>
+			<div class="common-type">
+				<h2>商品列表</h2>
+				<ul>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor3-1.jpg"/>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor3-2.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor3-3.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor3-4.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor3-5.jpg"/>
+						</a>
+					</li>
+				</ul>
+				
+			</div><div class="common-type">
+				<h2>商品列表</h2>
+				<ul>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor4-1.jpg"/>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor4-2.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor4-3.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor4-4.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor4-5.jpg"/>
+						</a>
+					</li>
+				</ul>
+				
+			</div><div class="common-type">
+				<h2>商品列表</h2>
+				<ul>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor5-1.jpg"/>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor5-2.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor5-3.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor5-4.jpg"/>
+						</a>
+					</li><li>
+						<a href="">
+							<span class="">洗衣机</span>
+							<img src="../image/floor/floor5-5.jpg"/>
+						</a>
+					</li>
+				</ul>
+				
+			</div>
+		</div>
+		
 	</div>
 		
 
