--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -42,10 +42,12 @@
 	<div class="detail-right-info">
 		<div class="info-right">
 			<h2>手机</h2>
-			<p class="title-info">xxxxxxxxxxxxxxxxx
-	手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机
-	手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机手机
-	手机手机手机手机手机手机手机手机手机手机手机手机手机手机
+			<p class="title-info">
+	小米手机2是全球首款采用高通APQ8064四核1.5GHz处理器的智能手机，
+部分智能手机性能对比
+部分智能手机性能对比
+这款CPU采用28纳米Krait架构，具有高性能低功耗的特性，同时拥有双通道内存，带来极致流畅的操作体验。
+
 			</p>
 			<div  class="info-price">
 				<span class="product_desc">价格:</span>
@@ -68,7 +70,7 @@
 	<div class="detail-bottom-info">
 		<div class="bottom-info">
 			<ul>
-				<li>商品详情</li>
+				<li>详细描述</li>
 				<li>用户评论</li>	
 				<li>相关参数</li>
 			</ul>
