--- a/src/view/result.html
+++ b/src/view/result.html
@@ -27,6 +27,14 @@
 
 		</div>
 		</div>
+	<div class="result-con cart-add-success">
+	<h1 class="result-title">加入购物车成功！</h1>
+	<div class="result-content">
+		<a class="link" href="./index.html">继续购物</a>
+		<a class="link" href="./cart.html">去购物车查看</a>
+
+	</div>
+	</div>
 	<div class="result-con default-success">
 		<h1 class="result-title">恭喜你，操作成功！</h1>
 		<div class="result-content">
