--- a/src/view/order-confirm.html
+++ b/src/view/order-confirm.html
@@ -21,8 +21,20 @@
 	</div>
 </div>
 <div class="page-wrap w">
-
-	
+	<!--地址列表页-->
+	<div class="panel address-model">
+		
+	</div>
+	<!--商品详情-->
+	<div class="panel list-model">
+		
+	</div>
+	<!--增加地址-->
+	<div class="addAddress-model">
+		<div class="add-body">
+			
+		</div>
+	</div>
 </div>
 <%=require('html-loader!./layout/footer.html')%>
 
