--- a/src/page/cart/index.css
+++ b/src/page/cart/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-11-13 20:13:45
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-11-14 22:44:57
+* @Last Modified time: 2017-11-19 20:58:23
 */
 .header-icon
 {
@@ -32,13 +32,16 @@
 }
 .header-icon-body .goods-info
 {
-	width:20%;
+	width:10%;
+	font-size:10px;
+
 }
 .header-icon-body .goods-info img
 {
 	width: 100px;
 	height: 120px;
 	float: left; 
+	padding-left:10px;
 }
 .header-icon-body .goods-info span
 {
@@ -49,18 +52,20 @@
 }
 .header-icon-body .goods-unitprice
 {
-	width: 20%;
-	padding-left:35px;
+	width: 15%;
+	padding-left:30px;
 }
 .header-icon-body .goods-nums
 {
 	width: 15%;
-	padding-left:-3px;
+	padding-left:30px;
+	text-align: left;
+
 }
 .header-icon-body .goods-all
 {
 	width: 20%;
-	padding-left:15px;
+	padding-left:70px;
 }
 .header-icon-body .goods-nums .nums-add,.header-icon-body .goods-nums .nums-del
 {
@@ -73,6 +78,10 @@
 	line-height: 20px;
 	vertical-align: center;
 	cursor: pointer;
+	-moz-user-select:none;
+	-webkit-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 .header-icon-body .goods-nums input
 {
@@ -84,6 +93,11 @@
 {
 	text-decoration: none;
 	color: #666;
+}
+.header-icon-body .goods-option
+{
+	width: 20%;
+	padding-left: 35px;
 }
 .cart-footer 
 {
@@ -105,12 +119,43 @@
 .cart-footer  .price-all
 {
 	position:absolute;
-	left: 800px;
+	left: 790px;
     top: 2px;
+
+}
+.goods-detail
+{
+	font-size: 10px;
+	width: 10%;
+	position: relative;
+
+}
+.goods-detail .link
+{
+	position: absolute;
+		padding-bottom: 0px;
+	vertical-align: bottom;
+	top:20px;
+}
+.nums-nomal
+{
+	text-align: center;
 }
 .cart-footer  .count-all
 {
 	position:absolute;
 	left: 908px;
     top: 2px;
+}
+/*错误信息*/
+.err-tip
+{
+	padding: 0 10px;
+	height: 60px;
+	line-height: 60px;
+	color: #f60;
+	font-weight: bold;
+	text-align: center;
+	background: #eee;
+	font-size: 16px;
 }
