--- a/src/page/order-confirm/index.css
+++ b/src/page/order-confirm/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-11-13 20:13:45
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-11-21 22:49:15
+* @Last Modified time: 2017-11-22 23:15:11
 */
 .address-item,.new-address
 {
@@ -123,13 +123,15 @@
  */
 .addAddress-model
 {
-	background: #eee;
+	background: #444;
 	position: fixed;
 	left: 0px;
 	bottom: 0px;
 	right: 0px;
 	top: 0px;
 	z-index: 999;
+	display: none;
+	opacity: 0.95;
 }
 .addAddress-model .add-body
 {
@@ -200,8 +202,12 @@
 .add-main select
 {
 	margin-right: 30px;
-	width: 50px;
+	width: 70px;
 	display: inline-block;
 	cursor: pointer;
 	height: 30px;
+}
+.add-main select option
+{
+	font-size: 15px;
 }
