--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -3,3 +3,6 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="keywords" content="happymmall,电商">
 <meta name="keywords" content="happymmall电商平台开发教程">
+<link rel="dns-prefetch" href="//cdn.bootcss.com">
+<link rel="dns-prefetch" href="//s.bootcss.com">
+<link rel="dns-prefetch" href="//img.bootcss.com">
