--- a/src/view/about.html
+++ b/src/view/about.html
@@ -21,8 +21,15 @@
 	</div>
 </div>
 <div class="page-wrap w">
-
-	
+	<%=require('html-loader!./layout/nav-side.html')%>
+	<div class="content with-nav">
+			<div class="panel">
+				<div class="panel-title">关于我们</div>
+				<div class="panel-body">
+					欢迎访问happy-mmall ，这是一个电商网址（xf)
+				</div>
+			</div>
+	</div>
 </div>
 <%=require('html-loader!./layout/footer.html')%>
 
