--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
 <!--指定浏览器-->
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="keywords" content="happymmall,电商">
-<meta name="keywords" content="happymmall电商平台开发教程">
+<meta name="keywords" content="happymmall,电商,xf,电商源码下载，网上购物，笔记本，二级，happymmall,MMAll">
+<meta name="description" content="一个提供数码通讯，手机电脑，家居百货，服装服饰，母婴，图书，食品等数万种优质商品，最优质最便捷的网上购物平台">
 <link rel="dns-prefetch" href="//cdn.bootcss.com">
 <link rel="dns-prefetch" href="//s.bootcss.com">
 <link rel="dns-prefetch" href="//img.bootcss.com">
