--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
 <%=require('html-loader!./layout/head-common.html')%>
-<title><%=htmlWebpackPlugin.options.title%></title>
+<title>MMall电商平台-最nx的购物网站</title>
 </head>
 <body>
 	<%=require('html-loader!./layout/nav.html')%>
