--- a/src/view/user-register.html
+++ b/src/view/user-register.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
 <%=require('html-loader!./layout/head-common.html')%>
-<title><%=htmlWebpackPlugin.options.title%>--happymmall电商平台</title>
+<title><%=htmlWebpackPlugin.options.title%>--MMall电商平台</title>
 </head>
 <body>
 	<%=require('html-loader!./layout/nav-simple.html')%>
